Address spacing issue with fr-seal-block-headers that don't feature hovers. #192

--- a/app/assets/stylesheets/components/officialness/_fr_box.css.scss
+++ b/app/assets/stylesheets/components/officialness/_fr_box.css.scss
@@ -201,7 +201,9 @@ Styleguide 1.1 FR Boxes
 
 .fr-seal-block {
   &.fr-seal-block-header {
-    position: absolute;
+    margin-bottom: 10px;
+
+    &.with-hover{ position: absolute; }
 
     h6 {
       float:left;
